clang/test/BSC/Negative/Trait/GenericTrait/define_trait_var1/define_trait_var1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F<T> {}G; // expected-error {{expected ';' after trait}}
                // expected-warning@-1 {{type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int}}